<resources>
    <string name="app_name">IrisRecognizer</string>
    <string name="already">Already enrolled?</string>
    <string name="enroll">Enrollment System</string>
    <string name="authenticate">Authenticate</string>
    <string name="choseImage">Chose an Image of your eye to aithenticate</string>
    <string name="browse">browse</string>
    <string name="auth">Authentication system</string>
    <string name="welcome_back">Welcome Back to IrisRecognizer!</string>
    <string name="about">Your choice to simple and accurate Iris Recognition!</string>
    <string name="back">Authenticate</string>
    <string name="welcome">Welcome to IrisRecognizer!</string>
    <string name="start">Enroll</string>
    <string name="better_recognition">For a better process, go for high-quality, well-lit images</string>
    <string name="select_image">Select Your Iris Image</string>
    <string name="by_gallary">Gallery  🖼</string>
    <string name="by_camera">Camera  📸</string>
    <string name="enroll_instead">Enroll instead?</string>
    <string name="auth_instead">Authenticate instead?</string>
    <string name="error_description">Wrong authentication, refused</string>
    <string name="try_again_1">Try Again ↺</string>
    <string name="eror">Failed To authenticate!</string>
    <string name="right">Successed To authenticate!</string>
    <string name="log_out">Logout</string>
    <string name="auth_description">Congratulation on authentication, you are in!</string>
</resources>