<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AuthenticationActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="257dp"
        android:layout_height="160dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/iris_recognizer_logo" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#959B999E"
        android:fontFamily="@font/mezra"
        android:text="@string/authenticate"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/browse" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="253dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/mezra"
        android:text="@string/enroll"
        android:textColor="@color/blusih"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/alreadyHave"
        android:layout_width="221dp"
        android:layout_height="56dp"
        android:fontFamily="@font/mezra"
        android:text="@string/already"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCreate"
        app:layout_constraintVertical_bias="0.304" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="225dp"
        android:layout_height="69dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/mezra"
        android:foregroundGravity="center_vertical|center|center_horizontal"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/choseImage"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/browse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/browse"
        android:layout_width="163dp"
        android:layout_height="64dp"
        android:fontFamily="@font/mezra"
        android:text="@string/browse"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="376dp" />

</androidx.constraintlayout.widget.ConstraintLayout>