<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundGravity="center">

    <ImageView
        android:id="@+id/start_image"
        android:layout_width="213dp"
        android:layout_height="277dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.268"
        app:srcCompat="@mipmap/iris_recognizer_logo" />

    <Button
        android:id="@+id/start"
        android:layout_width="200dp"
        android:layout_height="72dp"
        android:fontFamily="@font/mezra"
        android:foregroundGravity="center"
        android:text="@string/start"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.878" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="327dp"
        android:layout_height="74dp"
        android:fontFamily="@font/mezra"
        android:foregroundGravity="center_vertical|center|center_horizontal"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/app_name"
        android:textColor="@color/blusih"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077" />

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mezra"
        android:foregroundGravity="center"
        android:text="@string/welcome"
        android:textColor="@color/blusih"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.641" />

    <TextView
        android:id="@+id/about"
        android:layout_width="316dp"
        android:layout_height="72dp"
        android:fontFamily="@font/mezra"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/about"
        android:textColor="@color/blusih"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.745" />
</androidx.constraintlayout.widget.ConstraintLayout>