<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.irisrecognizer.activities.AnswerActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="296dp"
        android:layout_height="234dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.299"
        app:srcCompat="?android:attr/textCheckMarkInverse" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="309dp"
        android:layout_height="54dp"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/mezra"
        android:foregroundGravity="center|center_horizontal"
        android:gravity="center|center_vertical"
        android:text="@string/right"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tryAgain"
        android:layout_width="244dp"
        android:layout_height="74dp"
        android:fontFamily="@font/mezra"
        android:gravity="center"
        android:text="@string/log_out"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.793" />

    <TextView
        android:id="@+id/about_khattTech"
        android:layout_width="307dp"
        android:layout_height="118dp"
        android:fontFamily="@font/mezra"
        android:gravity="center"
        android:text="@string/auth_description"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.631" />

</androidx.constraintlayout.widget.ConstraintLayout>